// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Snapshot Tests > should render default state correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                         false │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with accessibility settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                         true* │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with all boolean settings disabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                        false* │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with file filtering settings configured 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                         false │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with mixed boolean and number settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                        false* │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with system settings in the User scope 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode (Modified in System)                                    false │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with the Workspace scope selected 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                        false* │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/77 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with tools and security settings 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                         false │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render with various boolean settings enabled 1`] = `
"╭──────────────────────────────────────────────────────────────────────────╮
│  Settings    Status    Stats   (↑ to switch tabs)                        │
│                                                                          │
│ ⌕ Search settings…                                                       │
│ Scope: User · Workspace                                                  │
│                                                                          │
│ ●︎ Tool Approval Mode                                                Auto │
│   Code Mode Only (Experimental)                                    false │
│   Language: UI                                 Auto (detect from system) │
│   Language: Model                               Auto (follow user input) │
│   Theme                                                   O1-Code Dark ▸ │
│   Display Mode                                                  Detailed │
│   Vim Mode                                                         true* │
│   Interactive Shell (PTY)                                      (not set) │
│ ▼                                                                        │
│                                                                          │
│ Approval mode for tool usage. Controls how tools are approved before ex… │
│ (Use Enter to select, Tab to switch scope)                          1/79 │
╰──────────────────────────────────────────────────────────────────────────╯"
`;
